* Using local copy of Pixi * Initiating game from this file again now
Signed-off-by: Henrik <Henrik@Matrix.local>

--- a/Game/index.html
+++ b/Game/index.html
@@ -7,7 +7,9 @@
 </style>
 </head>
 <body translate="no" >
-<script src='https://cdnjs.cloudflare.com/ajax/libs/pixi.js/4.5.1/pixi.min.js'></script>
+<script src='pixi.min.js'></script>
+<!-- https://cdnjs.cloudflare.com/ajax/libs/pixi.js/4.5.1/ -->
 <script src='boulderblaster.js'></script>
+<script >(new BoulderBlaster.Game).initiate(document);</script>
 </body>
 </html>
