--- a/Tests/SpecRunner.html
+++ b/Tests/SpecRunner.html
@@ -18,10 +18,12 @@
   <!-- include spec files here... -->
   <script src="spec/BlockEntitySpec.js"></script>
   <script src="spec/BoulderCollectionSpec.js"></script>
-  <script src="spec/MissileHandlerSpec.js"></script>
-  <script src="spec/ExplosionHandlerSpec.js"></script>
   <script src="spec/CollisionCheckerSpec.js"></script>
+  <script src="spec/ExplosionHandlerSpec.js"></script>
   <script src="spec/GameLogicSpec.js"></script>
+  <script src="spec/MissileHandlerSpec.js"></script>
+  <script src="spec/PlayerEntitySpec.js"></script>
+  
 </head>
 <body>
 </body>
