--- a/Game/index.html
+++ b/Game/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>Boulder Blaster</title>
 <style>
-	body { background-color: black; }
+	body { background-color: #404040; }
 </style>
 </head>
 <body translate="no" >
