Worked on CookieHandler
Added tests

--- a/Tests/SpecRunner.html
+++ b/Tests/SpecRunner.html
@@ -23,7 +23,7 @@
   <script src="spec/GameLogicSpec.js"></script>
   <script src="spec/MissileHandlerSpec.js"></script>
   <script src="spec/PlayerEntitySpec.js"></script>
-  
+  <script src="spec/CookieHandlerSpec.js"></script>
 </head>
 <body>
 </body>
