--- a/Tests/SpecRunner.html
+++ b/Tests/SpecRunner.html
@@ -18,12 +18,14 @@
   <!-- include spec files here... -->
   <script src="spec/BlockEntitySpec.js"></script>
   <script src="spec/BoulderCollectionSpec.js"></script>
+  <script src="spec/BoulderEntitySpec.js"></script>
   <script src="spec/CollisionHandlerSpec.js"></script>
+  <script src="spec/CookieHandlerSpec.js"></script>
   <script src="spec/ExplosionHandlerSpec.js"></script>
   <script src="spec/GameLogicSpec.js"></script>
   <script src="spec/MissileHandlerSpec.js"></script>
   <script src="spec/PlayerEntitySpec.js"></script>
-  <script src="spec/CookieHandlerSpec.js"></script>
+  <script src="spec/ScoreHandlerSpec.js"></script>
 </head>
 <body>
 </body>
