--- a/Game/index.html
+++ b/Game/index.html
@@ -5,6 +5,10 @@
 <title>Boulder Blaster</title>
 <style>
 	body { background-color: #404040; }
+	a {color: white; text-decoration: none; }
+	a:visited {color: white; }
+	a:hover {color: white; }
+	a:active {color: 0xFFD800; }
 </style>
 </head>
 <body translate="no" >
